--- a/vue3TestProject/src/main/resources/static/index.html
+++ b/vue3TestProject/src/main/resources/static/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vuetify 3 Vite Preview</title>
-  <script type="module" crossorigin src="/index-B0kZMOEX.js"></script>
-  <link rel="stylesheet" crossorigin href="/index-M2qmTHHN.css">
+    <title>vue3를 이용한 정희영의 포트폴리오입니다</title>
+  <script type="module" crossorigin src="/index-Cw6CDrSu.js"></script>
+  <link rel="stylesheet" crossorigin href="/index-BHspi0wQ.css">
 </head>
 
 <body>
