--- a/vue3TestProject/src/main/resources/static/index.html
+++ b/vue3TestProject/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vue3를 이용한 정희영의 포트폴리오입니다</title>
-  <script type="module" crossorigin src="/index-Cw6CDrSu.js"></script>
+  <script type="module" crossorigin src="/index-Ls-I8SMT.js"></script>
   <link rel="stylesheet" crossorigin href="/index-BHspi0wQ.css">
 </head>
 
