--- a/vue3TestProject/src/main/resources/static/index.html
+++ b/vue3TestProject/src/main/resources/static/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vue3를 이용한 정희영의 포트폴리오입니다</title>
-  <script type="module" crossorigin src="/index-dvaz8JtT.js"></script>
-  <link rel="stylesheet" crossorigin href="/index-Dj9x9O6E.css">
+  <script type="module" crossorigin src="/index-BJt5LLfL.js"></script>
+  <link rel="stylesheet" crossorigin href="/index-BwtvxE1K.css">
 </head>
 
 <body>
