--- a/vue3TestProject/src/main/resources/static/index.html
+++ b/vue3TestProject/src/main/resources/static/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vue3를 이용한 정희영의 포트폴리오입니다</title>
-  <script type="module" crossorigin src="/index-DiL0RRL6.js"></script>
-  <link rel="stylesheet" crossorigin href="/index-D_tjkC9i.css">
+  <script type="module" crossorigin src="/index-osxg0UTa.js"></script>
+  <link rel="stylesheet" crossorigin href="/index-D0ySR_TK.css">
 </head>
 
 <body>
